<resources>

    <!--change language-->
    <string name="change_language_title" translatable="false">Language</string>

    <!--untranslatable-->
    <string name="language_english" translatable="false">English</string>
    <string name="language_japanese" translatable="false">日本の</string>

    <string-array name="language_names">
        <item>@string/language_english</item>
        <item>@string/language_japanese</item>

    </string-array>

    <string name="language_english_code" translatable="false">en</string>
    <string name="language_japanese_code" translatable="false">ja</string>
    <string name="language_vietnamese_code" translatable="false">vi</string>

    <string-array name="language_codes">
        <item>@string/language_english_code</item>
        <item>@string/language_japanese_code</item>
        <item>@string/language_vietnamese_code</item>
    </string-array>

    <string name="list_of_my_steps">List of my steps</string>
    <string name="save_my_steps">Save my steps</string>
    <string name="choose_a_language">Choose a language</string>
    <string name="my_steps">My steps</string>
    <string name="steps_shared_from_a_friend">Steps shared from a friend</string>
    <string name="scan_steps_from_a_friend">Scan steps from a friend</string>
    <string name="create_a_new_step">Create a new step</string>
    <string name="choose_a_color">Choose a color</string>
    <string name="name_your_step">Name your step</string>
    <string name="your_name">Your name</string>
    <string name="save_as_a_poscard">Save as a postcard</string>
    <string name="merge_my_steps">Merge steps</string>
    <string name="delete_my_steps">Show only my steps</string>
    <string name="choose">Choose</string>
    <string name="cancel">Cancel</string>
    <string name="starting_time">Starting time</string>
    <string name="finishing_time">Finishing time</string>
    <string name="hours_limited">Please limit your trip within only 15 hours long</string>
    <string name="add">Add</string>
    <string name="add_step">Add Step</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="make_a_souvenir">Make a souvenir</string>
    <string name="app_name">SAKURA STAMP</string>
    <string name="unable_to_display_your_map">Unable to display your map</string>
    <string name="map_registration_is_complete">Your registration is complete</string>
    <string name="map_registration_failed">Map registration failed</string>
    <string name="please_enter_your_name">Please enter your name</string>
    <string name="please_enter_your_step_name">Please enter your step name</string>
    <string name="please_enter_start_date">Please enter a start date</string>
    <string name="please_enter_start_time">Please enter a start time</string>
    <string name="please_enter_stop_date">Please enter an end date</string>
    <string name="please_enter_stop_time">Please enter an end time</string>
    <string name="photos_saved">Photo Saved</string>
    <string name="failed_to_save_postcard">Failed to save</string>
    <string name="map_name">Map name</string>
    <string name="let_try_it_sometime">Come here whenever you want</string>
    <string name="get_map_completed">Get map completed</string>
    <string name="get_map_failed">Get map failed</string>
    <string name="share_map_completed">Share map completed</string>
    <string name="share_map_failed">Share map failed</string>
    <string name="sakura_stamp">Sakura Stamp</string>

    <string name="err_loctime_notfound">No location data found on specified time.</string>
    <string name="err_unreachable_server">Cannot reach the server. Check your internet connection.</string>
    <string name="err_server_notfound">The server could not be found. Please try again after some time.</string>
    <string name="err_timeout">Connection timeout. Please check your internet connection or the server status.</string>
    <string name="err_got_errorresponse">The server responds with an error</string>
    <string name="err_got_invalidresponse">The server responds invalid strings</string>
</resources>