<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="#03B47F">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/setting_icon"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="10dp"
                android:onClick="selectLanguage"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textStyle="bold"
                android:text="@string/app_name"
                android:textColor="#FFFFFF"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/mTvRemove"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right|center_vertical"
                android:layout_marginRight="10dp"
                android:onClick="removeMaps"
                android:text="@string/choose"
                android:textColor="#070707"
                android:textStyle="bold"
                />
        </FrameLayout>

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tl_demo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#03B47F"
            app:tabIndicatorColor="#FFF"
            app:tabIndicatorHeight="8dp"
            app:tabSelectedTextColor="@android:color/white"
            app:tabTextColor="#D5D5D5"
            app:tabIndicatorFullWidth="true">

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/list_of_my_steps"/>
            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/steps_shared_from_a_friend"/>
        </com.google.android.material.tabs.TabLayout>

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/vp_demo"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        </androidx.viewpager.widget.ViewPager>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/container"
        android:background="#00FFFFFF"/>
</FrameLayout>